Fix overflow

--- a/partials/_layout.scss
+++ b/partials/_layout.scss
@@ -465,6 +465,7 @@ footer {
         padding-top: 2rem;
 
         a {
+            padding: 10px 15px;
             font-size: 22px;
         }
     }
